start of styling

--- a/index.html
+++ b/index.html
@@ -21,6 +21,16 @@
           </button>
         </nav>
       </div>
+      <div class="col-12 col-md-4">
+        <div class="card">
+          <h3 class="card-header text-uppercase">Search By City</h3>
+          <form id="user-form" class="card-body">
+            <label class="form-label" for="username">City</label>
+            <input name="username" id="username" type="text" autofocus="true" class="form-input" />
+            <button type="submit" class="btn">Get Forecast</button>
+          </form>
+        </div>
+        </div>
 </header>
 <body>
     <script src="assets/js/homepage.js"></script>
