--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
     <div class="pos-f-t">
         <div class="collapse" id="navbarToggleExternalContent">
           <div class="bg-dark p-4">
-            <h3 class="text-white h4">Weather Dashboard</h3>
             <span class="text-muted">Toggleable via the navbar brand.</span>
           </div>
         </div>
         <nav class="navbar navbar-dark bg-dark">
+          <h3 class="text-white h4 center">Weather Dashboard</h3>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
