--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
           </div>
         </div>
         <nav class="navbar navbar-dark bg-dark">
-          <h3 class="text-white h4 center">Weather Dashboard</h3>
+          <h3 class="text-white h4">Weather Dashboard</h3>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
