--- a/index.html
+++ b/index.html
@@ -6,38 +6,73 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/open-iconic/1.1.1/font/css/open-iconic-bootstrap.min.css" />
-    <link rel="style" href=".assets/css/style.css" />
+    <link rel="style" href="./assets/css/style.css" />
     <title>Weather Dashboard</title>
 </head>
-
 <body>
 <header>
-    <div class="container-span">
-          <div class="bg-dark p-4">
-            <h3 class="text-white h4 text-center">Weather Dashboard</h3>
-          </div>
-        </div>
+  <nav class>
+    <h3 class="text-white h4 text-center">Weather Dashboard</h3>
+  </nav>
 </header>
-
-<div class="container-fluid">
-<div class="row">
-    <div class="col-lg-3">
-        <h3 class="card-header">Search By City</h3>
-        <div class="form-inline form-group">
-            <input name="search" id="search" type="text" autofocus="true" class="form-input" />
-            <button type="submit" class="btn" id="searchBtn">Get Forecast</button>
+    <div class="container">
+      <div class="row">
+          <div class="bg-dark p-4">
+          </div>
+          <h5></h5>
+        </div>
+        <div class="d-flex">
+          <input name="search" id="search" type="text" autofocus="true" class="form-input" />
+          <button type="submit" class="btn" id="searchBtn">Get Forecast</button>
+        </div>
+        <div>
+          <ul>
+          </ul>
         </div>
     </div>
-</div>
-</div>
 
-      <div class="col-lg-9">
-        <div id="today" class="mt-3"></div>
-        <div id="forecast" class="row mt-3"></div>
-      </div>
+<div class="col-lg-3">
+  <div id = "error" class="text-danger"></div>
 
-<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-<script src="assets/js/script.js"></script>
-</body>
+  <div class="d-flex">
+    <div class="">
+      <h3></h3>
+      <img id=""></img>
+    </div>
+    <div class="py-2"></div>
+    <div class="py-2"></div>
+    <div class="py-2"></div>
+    <div class="py-2"></div>
+  </div>
 
+        <div class="mt-2 pl-3 invisible" id="container5DaysHeading">
+          <h3>5-Day Forecast</h3>
+        </div>
+        <div class="d-flex justify-content-start flex-wrap invisible" id="container5DaysWeather">
+          <div class="card">
+            <div id="card1">
+            </div>
+          </div>
+          <div class="card">
+            <div id="card2">
+            </div>
+          </div>
+          <div class="card">
+            <div id="card3">
+            </div>
+          </div>
+          <div class="card">
+            <div id="card4">
+            </div>
+          </div>
+          <div class="card">
+            <div id="card5">
+            </div>
+          </div>
+        </div>
+        
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <script src="./assets/js/script.js"></script>
+  </body>
+        
 </html>
