update bootstrap components

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <h5><label for="searchCity" class="font-weight-md mt-3">Search for a City</label></h5>
         <div class="d-flex">
           <input type="text" class="form-control" placeholder="City Name" aria-label="City Name" aria-describedby="basic-addon1">
-          <button class="btn btn-primary" id="btnSearch" onclick="searchCity()"></button><span class="input-group-text" id="basic-addon2">get Forecast</span>
+          <button class="btn btn-primary" id="btnSearch" onclick="searchCity()"> <i class="fa fa-search"></i> </button>
         </div>
         <div>
           <ul>
