--- a/index.html
+++ b/index.html
@@ -1,81 +1,80 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Weather Dashboard</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"/>
     <link rel="style" href="./assets/css/style.css" />
-    <title>Weather Dashboard</title>
 </head>
 <body>
-<header>
-  <nav class="navbar navbar-dark bg-dark">
-    <h1 class="text-white mx-auto">Weather Dashboard</h3>
-  </nav>
-</header>
+  <header>
+    <nav class="navbar navbar-dark bg-dark">
+      <h1 class="text-white mx-auto">Weather Dashboard</h1>
+    </nav>
+  </header>
+  <!-- search city -->
     <div class="container">
       <div class="row">
-          <div class="col-12 col-lg-5 bg-light d-flex flex-column align-items-left">
+        <div class="col-12 col-lg-5 bg-light d-flex flex-column align-items-left">
           <div>
-          <h5><label for="searchCity" class="font-weight-md mt-3">Search for a City</label></h5>
+            <h5><label for="searchCity" class="font-weight-md mt-3">Search for a City</label></h5>
           </div>
           <div class="d-flex ">
-          <input type="text" class="form-control" placeholder="City Name" aria-label="City Name" aria-describedby="basic-addon1">
-          <button class="btn btn-primary" id="btnSearch" onclick="searchCity()"> <i class="fa fa-search"></i> </button>
+            <input type="text" class="form-control" placeholder="City Name" id="searchCityInput">
+            <button class="btn btn-primary" id="btnSearch" onclick="searchCity()"> <i class="fa fa-search"></i> </button>
+          </div>
+          <div>
+            <ul id="selectedCities" class="mt-3 mb-3 list-group"></ul>
+          </div>
         </div>
-        <div>
-          <ul id="selectedCities" class="mt-3 mb-3 list-group"></ul>
+
+  <div class="col-lg-3">
+    <div id = "error" class="text-danger"></div>
+<!-- daily forecast -->
+    <div class="d-flex flex-column align-items-left border border-right-0 rounded-sm mt-3 p-3 invisible" id="containerCurrentWeather">
+      <div class="py-2 d-flex align-items-center">
+        <h3 id="cityNameWeather"></h3>
+        <img id="currentWeatherIcon"></img>
+      </div>
+      <div class="py-2"><span>Temperature:&nbsp;&nbsp;</span><span id="temperature"></span></div>
+      <div class="py-2"><span>Humidity:&nbsp;&nbsp;</span><span id="humidity"></span></div>
+      <div class="py-2"><span>Wind Speed:&nbsp;&nbsp;</span><span id="windSpeed"></span></div>
+      <div class="py-2"><span>UV Index:&nbsp;&nbsp;</span><span id="UVIndex"></span></div>
+  </div>
+  <!-- 5 day forecast -->
+  <div class="mt-2 pl-3 invisible" id="container5DaysHeading">
+      <h3>5-Day Forecast</h3>
+  </div>
+    <div class="d-flex justify-content-start flex-wrap invisible" id="container5DaysWeather">
+        <div class="card">
+          <div id="card1">
+          </div>
         </div>
+        <div class="card">
+          <div id="card2">
+          </div>
+        </div>
+        <div class="card">
+          <div id="card3">
+          </div>
+        </div>
+        <div class="card">
+          <div id="card4">
+          </div>
+        </div>
+        <div class="card">
+          <div id="card5">
+          </div>
         </div>
     </div>
   </div>
 </div>
 
-<div class="col-lg-3">
-  <div id = "error" class="text-danger"></div>
-
-  <div class="d-flex justify-content-start flex wrap invisible" id="container">
-    <div class="col">
-      <h3></h3>
-      <img id=""></img>
-    </div>
-    <div class="py-2">daily forecast</div>
-    <div class="py-2"></div>
-    <div class="py-2"></div>
-    <div class="py-2"></div>
-  </div>
-
-  <!-- 5 day forecast -->
-        <div class="mt-2 pl-3 invisible" id="container5DaysHeading">
-          <h3>5-Day Forecast</h3>
-        </div>
-        <div class="d-flex justify-content-start flex-wrap invisible" id="container5DaysWeather">
-          <div class="card">
-            <div id="card1">
-            </div>
-          </div>
-          <div class="card">
-            <div id="card2">
-            </div>
-          </div>
-          <div class="card">
-            <div id="card3">
-            </div>
-          </div>
-          <div class="card">
-            <div id="card4">
-            </div>
-          </div>
-          <div class="card">
-            <div id="card5">
-            </div>
-          </div>
-        </div>
+</div>
         
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
     <script src="./assets/js/script.js"></script>
-  </body>
-        
+</body>      
 </html>
