--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
       <div class="py-2"><span>UV Index:&nbsp;&nbsp;</span><span id="UVIndex"></span></div>
   </div>
   <!-- 5 day forecast -->
-  <div class="mt-2 pl-3 invisible" id="container5DaysHeading">
+  <div class="mt-2 pl-3 invisible" id="container5DayHeading">
       <h3>5-Day Forecast</h3>
   </div>
-    <div class="d-flex justify-content-start flex-wrap invisible" id="container5DaysWeather">
+    <div class="d-flex justify-content-start flex-wrap invisible" id="container5DayWeather">
         <div class="card">
           <div id="card1">
           </div>
